--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ uuid = { version = "0.8.1", features = ["serde", "v4"] }
 thiserror = "1.0.20"
 futures = "0.3.5"
 async-trait = "0.1.36"
+rand = "0.7.3"
 
 [dev-dependencies]
 http-service-mock = "0.5.0"
